--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <div class="section contact">
         <div class="contact-links">
             <span><i class="fas fa-phone"></i> <a href="tel:+1234567890">+374 55971997</a></span>
+            <span><i class="fas fa-map-marker-alt"></i> <a href="https://www.google.com/maps/place/Yerevan,+Armenia" target="_blank">Yerevan, Armenia</a></span>
             <span><i class="fas fa-envelope"></i> <a href="mailto:tatev.harutyunyan@example.com">tatevharutyunyana@gmail.com</a></span>
             <span><i class="fab fa-linkedin"></i> <a href="https://www.linkedin.com/in/tatev-harutyunyan-pmp/" target="_blank">linkedin.com/in/tatev-harutyunyan-pmp</a></span>
         </div>
