--- a/index.html
+++ b/index.html
@@ -18,22 +18,26 @@
 <div class="container">
 
     <!-- Contact Section -->
-    <div class="section contact">
+    <!-- <div class="section contact">
         <div class="contact-links">
             <span><i class="fas fa-phone"></i> <a href="tel:+1234567890">+374 55971997</a></span>
             <span><i class="fas fa-map-marker-alt"></i> <a href="https://www.google.com/maps/place/Yerevan,+Armenia" target="_blank">Yerevan, Armenia</a></span>
             <span><i class="fas fa-envelope"></i> <a href="mailto:tatev.harutyunyan@example.com">tatevharutyunyana@gmail.com</a></span>
             <span><i class="fab fa-linkedin"></i> <a href="https://www.linkedin.com/in/tatev-harutyunyan-pmp/" target="_blank">linkedin.com/in/tatev-harutyunyan-pmp</a></span>
         </div>
-    </div>
+    </div> -->
 
     <!-- Summary Section -->
     <div class="section">
         <h2>Summary</h2>
         <p>
-            Certified Project Management Professional (PMP) with over 5 years of experience leading and delivering complex projects across diverse industries, including gambling, HR (relocation services), and outsourced web development. 
-            Proficient in Agile methodologies (Scrum, Kanban), team leadership, and strategic planning to drive efficiency and align projects with organizational goals. 
-            Skilled in collaborating with cross-functional teams, managing stakeholders, and ensuring the seamless execution of projects while fostering a culture of continuous improvement.
+            Skilled Accounting professional with 15+ years of progressive accountingexperience in wholesales, marketing, IT services and manufacturing, currently
+working towards ACCA Designation. I have gained an extensive insight within this
+field. I am an accomplished communicator, with excellent organizational, decision
+making and time management skills. I have a proven record of accomplishment of
+consistently meeting deadlines and regularly surpassing demanding performance
+goals. I am seeking a challenging and rewarding position, which is why I drew to
+this exciting opportunity.
         </p>
     </div>
 
