--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ this exciting opportunity.
                         <a href="https://imaginelive.com/" target="_blank" title="Imagine Live">
                             <img src="https://www.digitain.com/favicon.ico" alt="Digitain Icon" class="company-icon">
                         </a>
-                        Project and Delivery Manager @ Imagine Live (Digitain Group) <span>Dec 2023 - Present</span>
+                        Project and Delivery Manager @ Imagine Live (Digitain Group) <span>Dec 2023 - Feb 2024</span>
                     </h3>
                     <p>
                         Overseeing project delivery and operational excellence for Imagine Live, a leading division of Digitain Group specializing in live casino gaming solutions. Key responsibilities include:
